--- a/sass/components/_footer-form.scss
+++ b/sass/components/_footer-form.scss
@@ -74,8 +74,8 @@
 }
 
 .footer__footer-modal {
-    margin-left: 93px;
     margin-top: 0px;
+    max-width: 570px;
 }
 
 .footer-modal__subscription {
