--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -142,6 +142,10 @@
     .portfolio__list {
         width: calc((100% - 90px) / 3);
     }
+
+    .filters__item {
+        margin-top: 0px;
+    }
 }
 
 
