--- a/sass/layout/_description.scss
+++ b/sass/layout/_description.scss
@@ -53,16 +53,21 @@
     .description {
     padding-top: 60px;
 }
-.description__list {
+    .description__list {
     display: flex;
     flex-wrap: wrap;
-    margin-top: 30px;
+    margin-top: -30px;
     margin-left: -30px;
     }
+
+    .description__item:not(:last-child) {
+    margin-bottom: 0px;
+}
 
     .description__item {
         flex-basis: calc(100% / 2 - 30px);
         margin-left: 30px;
+        margin-top: 30px;
     }
 }
 
@@ -82,11 +87,10 @@
 
     .description__list {
     flex-wrap: nowrap;
-    margin-top: 0;
     }
 
     .description__item:not(:last-child) {
-    margin-right: 30px;
+    margin-right: 0px;
     }
 
 }
