--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -55,6 +55,10 @@ address {
     margin-bottom: 9px;
 }
 
+.subscription {
+    margin-top: 60px;
+}
+
 .subscription__offer {
     font-weight: 700;
     font-size: 14px;
@@ -66,7 +70,6 @@ address {
     margin-top: 0px;
     margin-bottom: 20px;
     text-align: center;
-    padding-top: 60px;
 }
 
 .subscription-list {
@@ -107,6 +110,10 @@ address {
     justify-content: space-around;
 
 }
+
+.subscription {
+    margin-top: 0px;
+}
 .subscription__offer {
     padding-top: 0px;
 }
@@ -119,6 +126,10 @@ address {
 }
 .color {
     text-align: left;
+}
+
+.footer-container {
+    justify-content: space-between;
 }
 
 .contacts {
