--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,6 +2,10 @@
     display: none;
 }
 
+.header.border {
+    border-bottom: 1px solid #ECECEC;
+    }
+
 .header {
     padding-top: 16px;
     padding-bottom: 16px;
@@ -80,8 +84,6 @@
 
     .header__list {
         display: inline;
-        margin-top: 21px;
-        margin-bottom: 21px;
     }
 
     .header__mobile-menu-btn {
