--- a/sass/layout/_regular-clients.scss
+++ b/sass/layout/_regular-clients.scss
@@ -17,7 +17,7 @@
 .regular-clients__link {
     display: flex;
     justify-content: center;
-    max-width: 170px;
+    width: 100%;
     height: 92px;
     border: 1px solid #AFB1B8;
     border-radius: 4px;
