--- a/sass/layout/_structure.scss
+++ b/sass/layout/_structure.scss
@@ -59,7 +59,6 @@
     .structure__list {
     display: flex;
     flex-wrap: wrap;
-    margin-top: 30px;
     margin-left: -30px;
     }
 
@@ -73,6 +72,7 @@
     .team-member {
     margin-left: 30px;
     width: calc((100% - 120px)/4);
+    margin-bottom: 0;
     }
 }
 
