--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -25,6 +25,15 @@
         background-color: transparent;
         border: none;
         padding: 0;
+
+        cursor: pointer;
+        transition: fill var(--transition-duration) cubic-bezier(0.4, 0, 0.2, 1);
+
+        &:hover,
+        &:focus {
+        fill: var(--accent-color);
+        transition: fill var(--transition-duration) cubic-bezier(0.4, 0, 0.2, 1);
+        }
     }
 
     &__mobile-menu-icon {
