--- a/css/main.css
+++ b/css/main.css
@@ -172,7 +172,7 @@ img {
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
   padding: 40px;
-  width: 450px;
+  width: 100%;
   height: 581px;
   background-color: var(--wite-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -204,13 +204,13 @@ img {
   height: 18px;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 480px) {
   .modal {
     width: 450px;
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .modal {
     width: 528px;
   }
@@ -496,6 +496,9 @@ img {
 }
 
 .mobile-menu__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   position: relative;
   padding-left: 25px;
   padding-top: 48px;
@@ -559,10 +562,6 @@ img {
   line-height: 1.16;
   letter-spacing: 0.02em;
   color: #757575;
-}
-
-.mobile-menu__contact {
-  margin-top: 302px;
 }
 
 .mobile-menu__social {
@@ -1116,7 +1115,7 @@ img {
 
 @media screen and (min-width: 1200px) {
   .regular-clients__element {
-    width: calc((100% - 300px) / 6);
+    width: calc((100% - 180px) / 6);
   }
   .regular-clients__link {
     width: 170px;
