--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -12,6 +12,9 @@
     pointer-events: none;
 
     &__container {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
         position: relative;
         padding-left: 25px;
         padding-top: 48px;
@@ -79,9 +82,6 @@
         color: #757575;
     }
 
-    &__contact {
-        margin-top: 302px;
-    }
 
     &__social {
         display: flex;
