--- a/css/main.css
+++ b/css/main.css
@@ -525,6 +525,7 @@ img {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  height: 100vh;
 }
 
 .mobile-menu.is-open {
