--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -44,6 +44,7 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+            height: 100vh;
         }
 
     &.is-open {
