--- a/sass/components/_social-list.scss
+++ b/sass/components/_social-list.scss
@@ -14,7 +14,7 @@
 
 .social-list {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .social-list__link {
