--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-wrap: wrap;
     padding-left: 0px;
-    margin-top: 0px;
+    margin-top: -8px;
     margin-bottom: 50px;
 
     &__item {
@@ -131,6 +131,10 @@
 @media screen and (min-width: 768px) {
     .filters {
     justify-content: center;
+    }
+
+    .filters__item {
+        margin-top: 0px;
     }
 
     .portfolio__list {
